# opencv-distance-object-detector

./: CMakeLists.txt  README.md  main.cpp
